// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ItemList > displays a list of items 1`] = `
<DocumentFragment>
  <header
    class="px_4 py_2 d_flex ai_center bd-b-w_1px border-bottom-style_solid bd-b-c_gray.100 gap_6 fs_md bg-c_white pos_sticky top_0 z_10"
  >
    <a
      class="pos_relative px_3 py_1.5 bdr_md c_gray.500 trs_all_0.2s fw_medium fs_sm hover:bg-c_gray.50 hover:c_gray.900"
      href="/"
    >
      Home
    </a>
    <a
      class="pos_relative px_3 py_1.5 bdr_md c_gray.500 trs_all_0.2s fw_medium fs_sm hover:bg-c_gray.50 hover:c_gray.900"
      href="/feeds"
    >
      Feeds
    </a>
    <a
      class="pos_relative px_3 py_1.5 bdr_md c_gray.500 trs_all_0.2s fw_medium fs_sm hover:bg-c_gray.50 hover:c_gray.900"
      href="/tags"
    >
      Tags
    </a>
  </header>
  <div
    class="d_flex flex-d_column gap_2 md:gap_6 p_2 md:p_4 h_calc(100vh_-_56px) min-h_0 ov_hidden bg-c_gray.50"
  >
    <div
      class="flex_1 min-h_0 ov_hidden d_flex flex-d_column"
    >
      <div
        class="d_flex flex-d_column gap_4 w_full pos_relative min-h_0 flex_1 h_full"
      >
        <div
          class="d_flex flex-d_column gap_2 w_full"
        >
          <div
            class="d_flex ai_center gap_2 w_full min-w_0"
          >
            <span
              class="fs_sm c_gray.600 white-space_nowrap"
            >
              Filter by Tag:
            </span>
            <div
              class="pos_relative w_full d_flex ai_center min-w_0"
            >
              <section
                aria-label="Scrollable content"
                class="d_flex ai_center flex-wrap_nowrap gap_2 ov-x_auto w_full scr-bar-w_none [&::-webkit-scrollbar]:d_none px_1 min-w_0"
                data-testid="horizontal-scroll-container"
              >
                <button
                  class="px_3 py_1 min-h_8 bdr_full fs_xs cursor_pointer bd_1px_solid d_inline-flex ai_center gap_1.5 trs_all_0.2s bg_blue.600 bd-c_blue.600 c_white"
                  type="button"
                >
                  All
                  <span
                    class="fs_xs fw_bold px_2 py_0.5 bdr_full min-w_2rem ta_center bg-c_blue.100 c_blue.700 ml_1.5 fs_10px min-w_1.5rem"
                  >
                    1
                  </span>
                </button>
              </section>
            </div>
          </div>
          <div
            class="d_flex ai_center jc_space-between flex-wrap_nowrap gap_2"
          >
            <div
              class="d_flex ai_center flex-sh_0 gap_2 min-w_0"
            >
              <div
                class="d_flex ai_center gap_2"
              >
                <span
                  class="fs_sm c_gray.500"
                >
                  4:00:00 AM
                </span>
                <button
                  class="bdr_md fw_medium cursor_pointer bd_1px_solid bd-c_gray.300 trs_all_0.2s d_inline-flex ai_center jc_center gap_2 disabled:op_0.5 disabled:cursor_not-allowed fs_xs py_1.5 px_3 bg_transparent c_gray.600 hover:bg_gray.50 hover:c_gray.700"
                  size="sm"
                  type="button"
                  variant="secondary"
                >
                  Refresh
                </button>
              </div>
            </div>
            <div
              class="d_flex ai_center flex-sh_0 gap_2 md:gap_4"
            >
              <div
                class="d_none md:d_flex ai_center gap_4"
              >
                <button
                  aria-label="Clear read items from current view"
                  class="bdr_md fw_medium cursor_pointer bd_1px_solid bd-c_gray.300 trs_all_0.2s d_inline-flex ai_center jc_center gap_2 disabled:op_0.5 disabled:cursor_not-allowed fs_xs py_1.5 px_3 bg_transparent c_gray.600 hover:bg_gray.50 hover:c_gray.700"
                  size="sm"
                  type="button"
                  variant="secondary"
                >
                  Clear Read Items
                </button>
                <div
                  class="d_flex ai_center gap_2"
                >
                  <label
                    class="fs_sm c_gray.600 fw_medium"
                    for="date-filter-select"
                  >
                    Date:
                  </label>
                  <select
                    class="p_1 px_2 fs_sm bd_1px_solid bd-c_gray.300 bdr_md bg-c_white cursor_pointer focus:ring_none focus:bd-c_blue.500 focus:bx-sh_0_0_0_1px_rgba(59,_130,_246,_0.5)"
                    id="date-filter-select"
                  >
                    <option
                      value="all"
                    >
                      All Time
                    </option>
                    <option
                      value="24h"
                    >
                      Past 24 Hours
                    </option>
                    <option
                      value="7d"
                    >
                      Past 7 Days
                    </option>
                    <option
                      value="30d"
                    >
                      Past 30 Days
                    </option>
                    <option
                      value="90d"
                    >
                      Past 90 Days
                    </option>
                    <option
                      value="365d"
                    >
                      Past 365 Days
                    </option>
                  </select>
                </div>
                <div
                  class="d_flex ai_center gap_2"
                >
                  <input
                    class="cursor_pointer"
                    id="show-read-toggle"
                    type="checkbox"
                  />
                  <label
                    class="fs_sm c_gray.600 cursor_pointer white-space_nowrap"
                    for="show-read-toggle"
                  >
                    Show Read
                  </label>
                </div>
                <div
                  class="d_flex ai_center gap_2"
                >
                  <input
                    class="cursor_pointer"
                    id="select-all-checkbox"
                    type="checkbox"
                  />
                  <label
                    class="fs_sm c_gray.600 cursor_pointer white-space_nowrap"
                    for="select-all-checkbox"
                  >
                    Select All
                  </label>
                </div>
              </div>
              <div
                class="d_flex md:d_none ai_center gap_2"
              >
                <div
                  class="d_flex ai_center gap_2"
                >
                  <label
                    class="fs_sm c_gray.600 fw_medium"
                    for="date-filter-select"
                  >
                    Date:
                  </label>
                  <select
                    class="p_1 px_2 fs_sm bd_1px_solid bd-c_gray.300 bdr_md bg-c_white cursor_pointer focus:ring_none focus:bd-c_blue.500 focus:bx-sh_0_0_0_1px_rgba(59,_130,_246,_0.5)"
                    id="date-filter-select"
                  >
                    <option
                      value="all"
                    >
                      All Time
                    </option>
                    <option
                      value="24h"
                    >
                      Past 24 Hours
                    </option>
                    <option
                      value="7d"
                    >
                      Past 7 Days
                    </option>
                    <option
                      value="30d"
                    >
                      Past 30 Days
                    </option>
                    <option
                      value="90d"
                    >
                      Past 90 Days
                    </option>
                    <option
                      value="365d"
                    >
                      Past 365 Days
                    </option>
                  </select>
                </div>
                <div
                  class="pos_relative"
                >
                  <button
                    aria-label="More actions"
                    class="bdr_md fw_medium cursor_pointer bd_1px_solid bd-c_gray.300 trs_all_0.2s d_inline-flex ai_center jc_center gap_2 disabled:op_0.5 disabled:cursor_not-allowed fs_xs py_1.5 px_3 bg_transparent c_gray.600 hover:bg_gray.50 hover:c_gray.700"
                    icon="[object SVGSVGElement]"
                    size="sm"
                    type="button"
                    variant="secondary"
                  >
                    <svg
                      fill="none"
                      height="16"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <title>
                        More actions
                      </title>
                      <circle
                        cx="12"
                        cy="12"
                        r="1"
                      />
                      <circle
                        cx="12"
                        cy="5"
                        r="1"
                      />
                      <circle
                        cx="12"
                        cy="19"
                        r="1"
                      />
                    </svg>
                    More
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex_1 min-h_0 ov_auto d_flex flex-d_column bg-c_white"
        >
          <div
            class="d_flex flex-d_column gap_4 p_0 pb_0"
          >
            <div
              class="d_flex flex-d_column gap_2 p_0"
            >
              <div
                class="d_flex ai_center jc_space-between bd_1px_solid bd-c_gray.100 bdr_md cursor_pointer w_full ov_hidden hover:bg-c_gray.50"
              >
                <div
                  class="d_flex ai_center flex_1"
                >
                  <div
                    class="px_3"
                  >
                    <input
                      class="cursor_pointer"
                      type="checkbox"
                    />
                  </div>
                  <button
                    class="d_flex flex-d_column gap_1 flex_1 px_3 py_1.5 ta_left cursor_pointer"
                    type="button"
                  >
                    <div
                      class="fw_medium c_blue.600 td_underline hover:c_blue.800 lc_1"
                    >
                      Item 1
                    </div>
                    <div
                      class="d_flex ai_center flex-wrap_wrap gap_2 xs:gap_4 mt_1 fs_xs c_gray.500 ov-wrap_anywhere"
                    >
                      <div
                        class="d_flex ai_center flex-wrap_nowrap flex-sh_0 gap_2 xs:gap_4"
                      >
                        <span
                          class="d_flex ai_center gap_1"
                          title="Published: 1/20/2026, 7:00:00 PM"
                        >
                          <span
                            class="d_none xs:d_inline"
                          >
                            Published:
                          </span>
                          <span
                            class="d_inline xs:d_none"
                            title="Published"
                          >
                            <svg
                              aria-hidden="true"
                              fill="none"
                              height="14"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                              viewBox="0 0 24 24"
                              width="14"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="m22 2-7 20-4-9-9-4Z"
                              />
                              <path
                                d="M22 2 11 13"
                              />
                            </svg>
                            <span
                              class="pos_absolute w_1px h_1px p_0 m_-1px ov_hidden clip_rect(0,_0,_0,_0) white-space_nowrap bd-w_0"
                            >
                              Published:
                            </span>
                          </span>
                          1/20/2026, 7:00:00 PM
                        </span>
                        <span
                          class="d_flex ai_center gap_1"
                          title="Received: 1/20/2026, 7:00:00 PM"
                        >
                          <span
                            class="d_none xs:d_inline"
                          >
                            Received:
                          </span>
                          <span
                            class="d_inline xs:d_none"
                            title="Received"
                          >
                            <svg
                              aria-hidden="true"
                              fill="none"
                              height="14"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                              viewBox="0 0 24 24"
                              width="14"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <circle
                                cx="12"
                                cy="12"
                                r="10"
                              />
                              <polyline
                                points="12 6 12 12 16 14"
                              />
                            </svg>
                            <span
                              class="pos_absolute w_1px h_1px p_0 m_-1px ov_hidden clip_rect(0,_0,_0,_0) white-space_nowrap bd-w_0"
                            >
                              Received:
                            </span>
                          </span>
                          1/20/2026, 7:00:00 PM
                        </span>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="d_flex ai_center jc_space-between bd_1px_solid bd-c_gray.100 bdr_md cursor_pointer w_full ov_hidden hover:bg-c_gray.50"
              >
                <div
                  class="d_flex ai_center flex_1"
                >
                  <div
                    class="px_3"
                  >
                    <input
                      class="cursor_pointer"
                      type="checkbox"
                    />
                  </div>
                  <button
                    class="d_flex flex-d_column gap_1 flex_1 px_3 py_1.5 ta_left cursor_pointer"
                    type="button"
                  >
                    <div
                      class="fw_medium c_gray.500 td_none hover:c_blue.800 lc_1"
                    >
                      Item 2
                    </div>
                    <div
                      class="d_flex ai_center flex-wrap_wrap gap_2 xs:gap_4 mt_1 fs_xs c_gray.500 ov-wrap_anywhere"
                    >
                      <div
                        class="d_flex ai_center flex-wrap_nowrap flex-sh_0 gap_2 xs:gap_4"
                      >
                        <span
                          class="d_flex ai_center gap_1"
                          title="Published: 1/20/2026, 7:00:00 PM"
                        >
                          <span
                            class="d_none xs:d_inline"
                          >
                            Published:
                          </span>
                          <span
                            class="d_inline xs:d_none"
                            title="Published"
                          >
                            <svg
                              aria-hidden="true"
                              fill="none"
                              height="14"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                              viewBox="0 0 24 24"
                              width="14"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="m22 2-7 20-4-9-9-4Z"
                              />
                              <path
                                d="M22 2 11 13"
                              />
                            </svg>
                            <span
                              class="pos_absolute w_1px h_1px p_0 m_-1px ov_hidden clip_rect(0,_0,_0,_0) white-space_nowrap bd-w_0"
                            >
                              Published:
                            </span>
                          </span>
                          1/20/2026, 7:00:00 PM
                        </span>
                        <span
                          class="d_flex ai_center gap_1"
                          title="Received: 1/20/2026, 7:00:00 PM"
                        >
                          <span
                            class="d_none xs:d_inline"
                          >
                            Received:
                          </span>
                          <span
                            class="d_inline xs:d_none"
                            title="Received"
                          >
                            <svg
                              aria-hidden="true"
                              fill="none"
                              height="14"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                              viewBox="0 0 24 24"
                              width="14"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <circle
                                cx="12"
                                cy="12"
                                r="10"
                              />
                              <polyline
                                points="12 6 12 12 16 14"
                              />
                            </svg>
                            <span
                              class="pos_absolute w_1px h_1px p_0 m_-1px ov_hidden clip_rect(0,_0,_0,_0) white-space_nowrap bd-w_0"
                            >
                              Received:
                            </span>
                          </span>
                          1/20/2026, 7:00:00 PM
                        </span>
                      </div>
                      <span
                        class="fs_xs c_gray.400 bg-c_gray.100 px_1.5 bdr_sm"
                      >
                        Read
                      </span>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ItemList > renders empty state when no items 1`] = `
<DocumentFragment>
  <header
    class="px_4 py_2 d_flex ai_center bd-b-w_1px border-bottom-style_solid bd-b-c_gray.100 gap_6 fs_md bg-c_white pos_sticky top_0 z_10"
  >
    <a
      class="pos_relative px_3 py_1.5 bdr_md c_gray.500 trs_all_0.2s fw_medium fs_sm hover:bg-c_gray.50 hover:c_gray.900"
      href="/"
    >
      Home
    </a>
    <a
      class="pos_relative px_3 py_1.5 bdr_md c_gray.500 trs_all_0.2s fw_medium fs_sm hover:bg-c_gray.50 hover:c_gray.900"
      href="/feeds"
    >
      Feeds
    </a>
    <a
      class="pos_relative px_3 py_1.5 bdr_md c_gray.500 trs_all_0.2s fw_medium fs_sm hover:bg-c_gray.50 hover:c_gray.900"
      href="/tags"
    >
      Tags
    </a>
  </header>
  <div
    class="d_flex flex-d_column gap_2 md:gap_6 p_2 md:p_4 h_calc(100vh_-_56px) min-h_0 ov_hidden bg-c_gray.50"
  >
    <div
      class="flex_1 min-h_0 ov_hidden d_flex flex-d_column"
    >
      <div
        class="d_flex flex-d_column gap_4 w_full pos_relative min-h_0 flex_1 h_full"
      >
        <div
          class="d_flex flex-d_column gap_2 w_full"
        >
          <div
            class="d_flex ai_center gap_2 w_full min-w_0"
          >
            <span
              class="fs_sm c_gray.600 white-space_nowrap"
            >
              Filter by Tag:
            </span>
            <div
              class="pos_relative w_full d_flex ai_center min-w_0"
            >
              <section
                aria-label="Scrollable content"
                class="d_flex ai_center flex-wrap_nowrap gap_2 ov-x_auto w_full scr-bar-w_none [&::-webkit-scrollbar]:d_none px_1 min-w_0"
                data-testid="horizontal-scroll-container"
              >
                <button
                  class="px_3 py_1 min-h_8 bdr_full fs_xs cursor_pointer bd_1px_solid d_inline-flex ai_center gap_1.5 trs_all_0.2s bg_blue.600 bd-c_blue.600 c_white"
                  type="button"
                >
                  All
                </button>
              </section>
            </div>
          </div>
          <div
            class="d_flex ai_center jc_space-between flex-wrap_nowrap gap_2"
          >
            <div
              class="d_flex ai_center flex-sh_0 gap_2 min-w_0"
            >
              <div
                class="d_flex ai_center gap_2"
              >
                <span
                  class="fs_sm c_gray.500"
                >
                  4:00:00 AM
                </span>
                <button
                  class="bdr_md fw_medium cursor_pointer bd_1px_solid bd-c_gray.300 trs_all_0.2s d_inline-flex ai_center jc_center gap_2 disabled:op_0.5 disabled:cursor_not-allowed fs_xs py_1.5 px_3 bg_transparent c_gray.600 hover:bg_gray.50 hover:c_gray.700"
                  size="sm"
                  type="button"
                  variant="secondary"
                >
                  Refresh
                </button>
              </div>
            </div>
            <div
              class="d_flex ai_center flex-sh_0 gap_2 md:gap_4"
            >
              <div
                class="d_none md:d_flex ai_center gap_4"
              >
                <button
                  aria-label="Clear read items from current view"
                  class="bdr_md fw_medium cursor_pointer bd_1px_solid bd-c_gray.300 trs_all_0.2s d_inline-flex ai_center jc_center gap_2 disabled:op_0.5 disabled:cursor_not-allowed fs_xs py_1.5 px_3 bg_transparent c_gray.600 hover:bg_gray.50 hover:c_gray.700"
                  disabled=""
                  size="sm"
                  type="button"
                  variant="secondary"
                >
                  Clear Read Items
                </button>
                <div
                  class="d_flex ai_center gap_2"
                >
                  <label
                    class="fs_sm c_gray.600 fw_medium"
                    for="date-filter-select"
                  >
                    Date:
                  </label>
                  <select
                    class="p_1 px_2 fs_sm bd_1px_solid bd-c_gray.300 bdr_md bg-c_white cursor_pointer focus:ring_none focus:bd-c_blue.500 focus:bx-sh_0_0_0_1px_rgba(59,_130,_246,_0.5)"
                    id="date-filter-select"
                  >
                    <option
                      value="all"
                    >
                      All Time
                    </option>
                    <option
                      value="24h"
                    >
                      Past 24 Hours
                    </option>
                    <option
                      value="7d"
                    >
                      Past 7 Days
                    </option>
                    <option
                      value="30d"
                    >
                      Past 30 Days
                    </option>
                    <option
                      value="90d"
                    >
                      Past 90 Days
                    </option>
                    <option
                      value="365d"
                    >
                      Past 365 Days
                    </option>
                  </select>
                </div>
                <div
                  class="d_flex ai_center gap_2"
                >
                  <input
                    class="cursor_pointer"
                    id="show-read-toggle"
                    type="checkbox"
                  />
                  <label
                    class="fs_sm c_gray.600 cursor_pointer white-space_nowrap"
                    for="show-read-toggle"
                  >
                    Show Read
                  </label>
                </div>
                <div
                  class="d_flex ai_center gap_2"
                >
                  <input
                    class="cursor_pointer"
                    id="select-all-checkbox"
                    type="checkbox"
                  />
                  <label
                    class="fs_sm c_gray.600 cursor_pointer white-space_nowrap"
                    for="select-all-checkbox"
                  >
                    Select All
                  </label>
                </div>
              </div>
              <div
                class="d_flex md:d_none ai_center gap_2"
              >
                <div
                  class="d_flex ai_center gap_2"
                >
                  <label
                    class="fs_sm c_gray.600 fw_medium"
                    for="date-filter-select"
                  >
                    Date:
                  </label>
                  <select
                    class="p_1 px_2 fs_sm bd_1px_solid bd-c_gray.300 bdr_md bg-c_white cursor_pointer focus:ring_none focus:bd-c_blue.500 focus:bx-sh_0_0_0_1px_rgba(59,_130,_246,_0.5)"
                    id="date-filter-select"
                  >
                    <option
                      value="all"
                    >
                      All Time
                    </option>
                    <option
                      value="24h"
                    >
                      Past 24 Hours
                    </option>
                    <option
                      value="7d"
                    >
                      Past 7 Days
                    </option>
                    <option
                      value="30d"
                    >
                      Past 30 Days
                    </option>
                    <option
                      value="90d"
                    >
                      Past 90 Days
                    </option>
                    <option
                      value="365d"
                    >
                      Past 365 Days
                    </option>
                  </select>
                </div>
                <div
                  class="pos_relative"
                >
                  <button
                    aria-label="More actions"
                    class="bdr_md fw_medium cursor_pointer bd_1px_solid bd-c_gray.300 trs_all_0.2s d_inline-flex ai_center jc_center gap_2 disabled:op_0.5 disabled:cursor_not-allowed fs_xs py_1.5 px_3 bg_transparent c_gray.600 hover:bg_gray.50 hover:c_gray.700"
                    icon="[object SVGSVGElement]"
                    size="sm"
                    type="button"
                    variant="secondary"
                  >
                    <svg
                      fill="none"
                      height="16"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <title>
                        More actions
                      </title>
                      <circle
                        cx="12"
                        cy="12"
                        r="1"
                      />
                      <circle
                        cx="12"
                        cy="5"
                        r="1"
                      />
                      <circle
                        cx="12"
                        cy="19"
                        r="1"
                      />
                    </svg>
                    More
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex_1 min-h_0 ov_auto d_flex flex-d_column bg-c_white"
        >
          <div
            class="d_flex flex-d_column gap_4 p_0 pb_0"
          >
            <div
              class="d_flex flex-d_column gap_2 p_0"
            />
            <div
              class="d_flex ai_center jc_center bd_1px_dashed bd-c_gray.200 bdr_md p_6 ta_center c_gray.600"
            >
              <div
                class="d_flex flex-d_column ai_center gap_2"
              >
                <div
                  class="fw_medium"
                >
                  No items found.
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
